# problem-bulletin

./: .env.example  .env.test  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  podman-compose.yml  pyproject.toml  render-build.sh  render.yaml  start-tunnel.sh
.claude/lessons-learned/: ticketing-v2.1.md  ticketing-v2.10.md  ticketing-v2.11.md  ticketing-v2.12.md  ticketing-v2.13.md  ticketing-v2.14.md  ticketing-v2.15.md  ticketing-v2.16.md  ticketing-v2.17.md  ticketing-v2.18.md  ticketing-v2.19.md  ticketing-v2.2.md  ticketing-v2.20.md  ticketing-v2.21.md  ticketing-v2.22.md  ticketing-v2.23.md  ticketing-v2.24.md  ticketing-v2.25.md  ticketing-v2.26.md  ticketing-v2.27.md  ticketing-v2.28.md  ticketing-v2.3.md  ticketing-v2.4.md  ticketing-v2.5.md  ticketing-v2.6.md  ticketing-v2.7.md  ticketing-v2.8.md  ticketing-v2.9.md  ticketing-v2.md  v2.10-pydantic-audit-diagnosis.md  v2.10-wp01-manifest.md  v2.10-wp02-diagnosis.md  v2.10-wp03-diagnosis.md  v2.10-wp04a-diagnosis.md  v2.10-wp04b-diagnosis.md  v2.10-wp04c-diagnosis.md  v2.10-wp05-diagnosis.md  v2.10-wp06-diagnosis.md  v2.10-wp07-diagnosis.md  v2.10-wp08-diagnosis.md  (+68 more)
.github/workflows/: deploy-pages.yml
alembic/: env.py
alembic/versions/: 3707b2b26b58_initial_schema.py  7f57993c9b09_add_domains_table_and_domain_id_to_.py  a10_ticket_last_actor.py  a11_ticket_notifications.py  a12_add_handles.py  a13_ticket_activity_index.py  a14_audit_log.py  a15_user_handle_changed_at.py  a16_agent_account_created_by_backfill.py  a17_agent_accounts_created_by_not_null.py  a18_project_coalesce_seconds.py  a19_rename_problems_legacy_status_to_status.py  a1_agent_kanban_rename_problems_to_tickets.py  a20_ck_convention_alignment.py  a2_agent_kanban_agent_accounts_and_audit_log.py  a3_agent_kanban_ticket_transitions_and_links.py  a44727b02982_add_edit_suggestions_table.py  a4_agent_kanban_search_indexes.py  a5_agent_kanban_seq_and_comments.py  a6_rename_tickets_to_problems.py  a7_create_work_items.py  a8_finalize_ticket_split.py  a9_ticketing_v2.py  ec940c7db8f3_add_seq_number_to_problems.py  v4a_agent_run_table.py  v6a_project_lesson_table.py  v6b_agent_run_lesson_idx.py  v7a_ticket_comment_parent.py  v8a_share_post_tables.py  v8b_bounty_table.py  z_pg_trgm_indexes.py
app/: config.py  database.py  enums.py  errors_envelope.py  events.py  exceptions.py  logging.py  main.py  schemas.py
app/auth/: __init__.py  dependencies.py  jwt.py  magic_link.py  oidc.py
app/mcp_server/: __init__.py  errors.py  server.py  tools.py
app/middleware/: agent_step.py  bearer_auth.py  correlation.py  logging.py  rate_limit.py  security.py
app/models/: __init__.py  activity_audit_log.py  agent_account.py  agent_run.py  app_config.py  attachment.py  audit_log.py  audit_log_event.py  bounty.py  comment.py  domain.py  edit_suggestion.py  flag.py  magic_link.py  notification.py  problem.py  project.py  project_lesson.py  share_post.py  solution.py  ticket.py  ticket_attachment.py  ticket_comment.py  ticket_link.py  ticket_notification.py  ticket_transition.py  ticket_watcher.py  user.py  watch.py
app/observability/: __init__.py  logging.py  otel.py  tracing.py
app/routes/: __init__.py  agent_runs.py  agents.py  attachments.py  audit_log.py  auth.py  bounties.py  comments.py  domains.py  edit_suggestions.py  health.py  leaderboard.py  me.py  meta.py  notifications.py  notifications_v1.py  people.py  problems.py  projects.py  realtime_token.py  realtime_ws.py  search.py  share_posts.py  solutions.py  sprints.py  tickets.py  users.py  voting.py  watches.py  ws.py  ws_tickets.py
app/schemas/: __init__.py  audit_log.py  bounties.py  common.py  errors.py  (+8 more)
docs/: AION_BULLETIN_DESIGN.md  AION_BULLETIN_ENGINEERING_GUIDE.md  AION_BULLETIN_IMPLEMENTATION_DOCS.md  AION_BULLETIN_SPEC.md  AION_BULLETIN_SPEC_SUMMARY.md  AION_BULLETIN_TEST_DOCS.md  DESIGN_REF.md
e2e/: agent-assign-flow.spec.ts  bounty-space.spec.ts  global-search.directmatch.spec.ts  global-search.typeahead.spec.ts  global-search.viewall.spec.ts  kanban-to-hierarchy-link.spec.ts  project-hierarchy.spec.ts  search-share-bounty.spec.ts  share-space.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
nginx/: nginx.conf
scripts/: agent_demo.md  agent_demo.py  agent_demo_direct.py  backup.sh  create_agent_account.py  generate-systemd.sh  restore.sh
tests/: conftest.py  test_agent_accounts_created_by.py  test_agent_accounts_created_by_orm_alignment.py  test_alembic_constraint_name_lint_wp10.py  test_body_schema_contract_pins_wp02_v214.py  test_ck_naming_convention_wp02_v213.py  test_config.py  test_conftest_env_audit_wp09.py  test_create_app_factory_lint_wp09.py  test_enums.py  test_exception_envelope_contract_wp09.py  test_exceptions.py  test_frontend_tsc_lint_v225.py  test_known_gaps.py  test_legacy_status_sweep.py  test_main.py  test_mock_headers_lint_wp11.py  test_naming_convention_wp10.py  test_no_syntax_warnings_wp02_v216.py  test_no_v1_deferred_mechanism_wp12.py  test_openapi_ts_parity_wp05_v213.py  test_openapi_ts_parity_wp11.py  test_orm_to_dict_schema_subset_wp03.py  test_patch_string_resolution_lint_wp08.py  test_request_schema_contract_pins_wp04.py  test_schemas.py  test_spa_catchall_hardening_wp11.py  test_text_cast_lint_wp08.py  test_type_ignore_lint_wp03_v217.py  test_typecheck_lint_v219_wp02.py  test_v1_routes_gone.py  test_v2_11_wp05_boot_hardening.py
(+435 files in other folders)
