[project]
name = "aion-bulletin"
version = "0.1.0"
description = "Aion Bulletin application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic>=2.7",
    "pydantic-settings",
    "authlib",
    "python-jose[cryptography]",
    "aiosmtplib",
    "httpx",
    "python-multipart",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
